--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.4",
     "firebase": "^9.17.1",
+    "gh-pages": "^5.0.0",
     "mui-image": "^1.0.7",
     "notistack": "^3.0.1",
     "query-string": "^8.1.0",
